--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style (1).css">
     <title>Horiseon Services</title>
 </head>
 
